# PythonFO

./: CHANGELOG.md  COPYRIGHT.txt  README.md  pyproject.toml  requirements.txt  requirements_whisper.txt  utils.py
.github/: CONTRIBUTING.md
Aircraft/FBW/A32NX/: PythonFO.py  list_of_commands.md  process_command.py  sc_functions.py
FBW/A32NX/: PythonFO.py  listen_for_command.py  process_command.py  sc_functions.py  utils.py
code/: convert_numbers.py  license_notice.py  listen_for_command.py
