# This file is part of PythonFO: Free virtual first officer for Microsoft Flight Simulator written entirely in Python
# Copyright (C) 2025  Vilgot Szasz Kero
# PythonFO comes with ABSOLUTELY NO WARRANTY; for details see COPYRIGHT.txt


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "PythonFO"
description = "Free virtual first officer for Microsoft Flight Simulator written entirely in Python"
keywords = ["Microsoft Flight Simulator", "MSFS", "voice control"]
version = "0.0.0"

readme = "README.md"
license = "GPL-3.0-or-later"

authors = [
    {name = "Vilgot Szasz Kero"}
]

dependencies = [
    "keyboard",
    "pyaudio",
    "SpeechRecognition",
    "pysimconnect"
]


[project.optional-dependencies]
vosk = [
    "vosk"
    ]


classifiers = [
    "Programming Language :: Python",
]


[project.urls]
Repository = "https://github.com/ViSzKe/PythonFO"